font for viewing plain/text messages. Useful for Bugzilla emails for instance.
- Added an option to reverse the order of messages (last -> first)
- Fixes a bug where a thread would be incorrectly summarized as more than one
conversation. This is actually a bug in Thunderbird, see bug 538750.
- Fixed a bug that would render tab characters incorrectly in plain/text
messages with fixed-width fonts.
- "Mark all read" now also marks your own messages as read. The menuitem was
sometimes incorrectly grayed out. This is now fixed.
- Improve the look of printed messages (many more improvements).

GMail Conversation View 0.3alpha1
---------------------------------
- Added a small paperclip icon next to messages that have "real" attachments (a
"false" attachment is an attachment you can display in the conversation view
such as texts, forwarded emails, old emails, etc.)
- Added a context-menu to the multi message view, that allows you to *print*
conversations. There's an associated "print style". Other various actions are
available through the context menu.
- Added extra buttons (+ preferences) when viewing a conversation : unfold all,
fold all, mark all read, open in new tab. There buttons only appear if viewing a
conversation, not a summary of messages scattered accross different threads.
- Added an option that allows you to focus the first unread message when viewing
a conversation (if all messages are read, focuses to the last message). This
should be working perfectly now.
- Fixed a bug when the add-on failed to retrieve certain messages and displays
"..." instead of the message's text.
- Fix some performance issues (optimize array accesses, remove jQuery animations
as it would considerably slow down unfolding of long emails).
- For GMail accounts, since the same message is in multiple folders, useless
changes of folders were performed when trying to display a specific message by
clicking on the sender's name. This is now fixed.