@@ -6,7 +6,7 @@
 
   <Description about="urn:mozilla:install-manifest">
     <em:id>gconversation@xulforum.org</em:id>
-    <em:version>0.3alpha2.100218pre</em:version>
+    <em:version>0.3alpha2.100219pre</em:version>
     
     <!-- Target Application this theme can install into, 
         with minimum and maximum supported versions. --> 
@@ -14,7 +14,7 @@
       <Description>
         <em:id>{3550f703-e582-4d05-9a08-453d09bdfdc6}</em:id>
         <em:minVersion>3.0.1</em:minVersion>
-        <em:maxVersion>3.1b1pre</em:maxVersion>
+        <em:maxVersion>3.2</em:maxVersion>
       </Description>
     </em:targetApplication>
     
