@@ -14,7 +14,7 @@
       <Description>
         <em:id>{3550f703-e582-4d05-9a08-453d09bdfdc6}</em:id>
         <em:minVersion>3.0.1</em:minVersion>
-        <em:maxVersion>3.1b1pre</em:maxVersion>
+        <em:maxVersion>3.2</em:maxVersion>
       </Description>
     </em:targetApplication>
     
